# cv-glaucoma

./: .gitignore  README.md  gradcam.py  main.py  pyproject.toml  to-commit.txt  to-create.txt  utils.py
datasets/: origa_dataset.py
models/: resnet.py  vgg.py
results/: resnet50-fe-100.csv  resnet50-fe.csv  resnet50-ft4-100.csv  resnet50_sex.csv  vgg16-fe.csv  vgg16-ft3.csv  vgg16-ft6.csv
